--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function displayIndianTime() {
 
     // Convert to Indian Standard Time (IST) by adjusting the time zone offset
     let options = { 
-        timeZone: 'Asia/Kolkata', 
+        timeZone: 'India/Kolkata', 
         year: 'numeric', 
         month: '2-digit', 
         day: '2-digit', 
